# Nexus

./: .gitignore  ARCHITECTURE_DESIRED.md  ARCHITECTURE_STATUS.md  NEXUS_ARCHITECTURE.md  NEXUS_PRINCIPLES.md  README.md  build_global_cache.py  headless_test.py  nexus_cli.py  pyproject.toml  test_json.py
core/: __init__.py
core/base/: base_tool.py
core/di/: __init__.py  container.py
core/interfaces/: agent.py  engine.py  inference.py  kernel.py  knowledge.py  memory.py  planner.py  tool.py
core/models/: contracts.py  graph.py  history.py  instruction.py  session.py  tool_context.py  workflow_objects.py
core/telemetry/: __init__.py  logger.py
engine/: __init__.py
infrastructure/: __init__.py
infrastructure/capabilities/: dataset_operations.py  extension_discovery.py
infrastructure/inference/: gemini_engine.py  manager.py  model_manager.py  ollama_engine.py
kernel/: compiler.py  event_bus.py  executor.py  registry.py  scheduler.py  state_manager.py  worker.py
legacy/: README.md  schema_generator.py  scorer.py  validator.py
legacy/agents/: __init__.py  browser_agent.py  code_agent.py  dataset_agent.py  file_agent.py  os_agent.py  registry.py  terminal_agent.py
legacy/api/: __init__.py  main.py  models.py
legacy/tests/: test_e2e_scenarios.py  test_environment.py  test_memory_subsystem.py
memory/: __init__.py  facade.py  models.py  service.py
memory/ingestion/: __init__.py  components.py  coordinator.py  parser_registry.py  pipeline.py
planner/: live_planner.py
plugins/: __init__.py
presentation/: render_engine.py
(+58 files in other folders)
